# Awesome-Grok-Skills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILLS_INDEX.md  file-structure.md  generate_agent_docs.py  pyproject.toml
.mimocode/: .cron-lock
agents/: expansion_complete.txt  expansion_complete_complete_complete_complete_complete_complete_complete_success.txt  expansion_complete_complete_complete_complete_complete_complete_success.txt  expansion_complete_complete_complete_complete_complete_success.txt  expansion_complete_complete_complete_complete_success.txt  expansion_complete_complete_complete_success.txt  expansion_complete_complete_success.txt  expansion_complete_complete_success_complete.txt  expansion_complete_final.txt  expansion_complete_final_report.txt  expansion_complete_final_success.txt  expansion_complete_final_success_final.txt  expansion_complete_final_success_final_report.txt  expansion_complete_final_success_report.txt  expansion_complete_success.txt  expansion_complete_success_complete_complete.txt  expansion_complete_success_complete_final.txt  expansion_complete_success_final.txt  expansion_complete_success_final_report.txt  expansion_final.txt  expansion_final_complete.txt  expansion_final_complete_complete_success.txt  expansion_final_complete_report.txt  expansion_final_complete_success.txt  expansion_final_complete_success_complete_complete.txt  expansion_final_complete_success_report.txt  expansion_final_report.txt  expansion_final_success.txt  expansion_final_success_complete.txt  expansion_final_success_complete_complete.txt  expansion_final_success_report.txt  expansion_success.txt  expansion_success_complete.txt  expansion_success_complete_complete_complete.txt  expansion_success_complete_complete_complete_complete.txt  expansion_success_complete_complete_complete_complete_complete.txt  expansion_success_complete_complete_complete_complete_complete_complete.txt  expansion_success_complete_complete_final.txt  expansion_success_complete_final.txt  expansion_success_complete_final_complete.txt  (+47 more)
awesome_grok_skills/: __init__.py  cli.py
awesome_grok_skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  STYLE_GUIDE.md  TESTING_GUIDE.md
future/: FUTURE_AGENTS.md  FUTURE_SKILLS.md  README.md
grok-models/: grok-1-5.md  grok-1.md  grok-2-mini.md  grok-2.md  grok-3-fast.md  grok-3-mini.md  grok-3.md  grok-4-1-fast.md  grok-4-1.md  grok-4-20-beta.md  grok-4-3-beta.md  grok-4-5.md  grok-4-fast.md  grok-4-heavy.md  grok-4.md  grok-api-reference.md  grok-best-practices.md  grok-build.md  grok-code-fast-1.md  grok-integration-guide.md  grok-use-cases.md  (+2 more)
(+1521 files in other folders)
