[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-grok-skills"
version = "2.1.0"
description = "Comprehensive repository of agentic skills tuned for Grok's personality"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "pytest>=7.4.0",
]

[project.scripts]
grok = "awesome_grok_skills.cli:main"

[project.urls]
Homepage = "https://github.com/LifeJiggy/Awesome-Grok-Skills"
Repository = "https://github.com/LifeJiggy/Awesome-Grok-Skills.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["awesome_grok_skills*"]
